--- a/bproj/css/1-valentino.css
+++ b/bproj/css/1-valentino.css
@@ -93,7 +93,7 @@
 
 #toggle2 {
     position: absolute;
-    top: -5vh;
+    top: -15vh;
     left: 40vh;
     color: var(--schwarz);
 }
@@ -107,7 +107,7 @@
 
 #toggle4 {
     position: absolute;
-    top: 15vh;
+    top: 25vh;
     left: -20vh;
     color: var(--schwarz);
 }
@@ -276,19 +276,19 @@
 
 #cinematic-up {
     top: 0;
-    height: 0vh;
+    height: 5vh;
     animation: cinematic 2s ease-in calc(var(--scrollX) * -2s) paused;
 }
 
 #cinematic-down {
     bottom: 0;
-    height: 0vh;
+    height: 5vh;
     animation: cinematic 2s ease-in calc(var(--scrollX) * -2s) paused;
 }
 
 @keyframes cinematic {
     0% {
-        height: 0;
+        height: 5vh;
     }
 
     74% {
